tests/fixtures/kotlin/correct/MainFunction.kt
// FIXTURE: correct/MainFunction.kt
// EXPECT: no-diagnostics

package fixtures.correct

fun main() {
    println("Hello from kotlin-analyzer!")
    println("This file tests runnables detection for fun main()")
}
